--- a/style.css
+++ b/style.css
@@ -199,7 +199,8 @@ img:hover {
     width: 100%;
     height: 45px;
     background-color: lightgrey;
-    position: fixed;
+    position: absolute;
+    bottom: 0;
     box-shadow: -2px -2px 10px gray;
     border-radius: 10px;
 }
