--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ li {
     width: 100%;
     height: 500px;
     display: flex;
+    margin-top: 60px;
 }
 .welcome:hover{
     cursor: default;
@@ -197,11 +198,12 @@ img:hover {
 .fixed {
     /* border: 2px solid black; */
     width: 100%;
-    height: 45px;
+    height: 50px;
     background-color: lightgrey;
     position: fixed;
     box-shadow: -2px -2px 10px gray;
     border-radius: 10px;
+    margin-top: 10px;
 }
 .fixed-box {
     /* border: 2px solid black; */
